[gd_scene load_steps=2 format=3 uid="uid://b7vyq3pyqntvx"]

[ext_resource type="Script" path="res://Prog122a.gd" id="1_qhse6"]

[node name="Prog122a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhse6")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 448.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 480.0
offset_right = 320.0
offset_bottom = 608.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 480.0
offset_right = 736.0
offset_bottom = 608.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 480.0
offset_right = 1152.0
offset_bottom = 608.0
text = "Close"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
